--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,11 +53,8 @@ spring:
         stdio:
           connections:
             github:
-              command: ${MCP_GITHUB_COMMAND:npx}
-              args:
-                - "-y"
-                - "@modelcontextprotocol/server-github"
-
+              command: mcp-server-github
+              args: []
               env:
                 GITHUB_PERSONAL_ACCESS_TOKEN: ${GITHUB_PAT}
         toolcallback:
